--- a/css/footer.css
+++ b/css/footer.css
@@ -3,33 +3,31 @@
   color: white;
   padding-left: 2rem;
   padding-right: 2rem;
+}
 
-  /* Outer content grid */
-  & .outer-grid {
-    /* spacer, project description, spacer, link columns, spacer */
-    grid-template-columns: 0.1fr 3fr 3fr 4fr 0.1fr;
-    align-items: center;
-    margin-bottom: 0rem;
+/* Outer content grid */
+.footer .outer-grid {
+  grid-template-columns: 0.1fr 3fr 3fr 4fr 0.1fr;
+  align-items: center;
+  margin-bottom: 0rem;
+}
 
-    & li {
-      list-style: none;
-    }
+.footer .outer-grid li {
+  list-style: none;
+}
 
-  }
+/* Heading colours */
+.footer a,
+.footer h1,
+.footer h2,
+.footer h3,
+.footer h4,
+.footer h5,
+.footer h6 {
+  color: white;
+}
 
-  /* Heading colours */
-  & a,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    color: white;
-  }
-
-  & h1 {
-    font-size: 1.25rem;
-    font-weight: bold;
-  }
+.footer h1 {
+  font-size: 1.25rem;
+  font-weight: bold;
 }
